--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <body class= ".font-poppins ">
     <main class="bg-[#010313] min-h-screen  bg-[url(./images/background.png)] bg-no-repeat bg-center ">
         <!-- Home Screen -->
-        <section class="home hidden min-h-screen text-white flex flex-col justify-center items-center space-y-14 ">
+        <section class="home  min-h-screen text-white flex flex-col justify-center items-center space-y-14 ">
             <h1 class="text-8xl font-anton">ALPHABET CLASH PRO</h1>
             <p>Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
                          <!-- <button class="bg-white text-black w-28 h-[50px] rounded-lg space-y-3">Play Now</button> -->
-            <button class="btn bg-white text-black w-28 h-[50px] rounded-lg space-y-3">
+            <button onclick="play()" class="btn bg-white text-black w-28 h-[50px] rounded-lg space-y-3">
                 Play Now
             </button>
         </section>
@@ -103,6 +103,6 @@
 
     </main>
 
-    
+    <script src="./script/alphaclash.js"></script>
 </body>
 </html>
