--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class= ".font-poppins ">
     <main class="bg-[#010313] min-h-screen  bg-[url(./images/background.png)] bg-no-repeat bg-center ">
         <!-- Home Screen -->
-        <section class="home  min-h-screen text-white flex flex-col justify-center items-center space-y-14 ">
+        <section id="home" class="min-h-screen text-white flex flex-col justify-center items-center space-y-14 ">
             <h1 class="text-8xl font-anton">ALPHABET CLASH PRO</h1>
             <p>Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
                          <!-- <button class="bg-white text-black w-28 h-[50px] rounded-lg space-y-3">Play Now</button> -->
@@ -27,7 +27,7 @@
         
 
         <!-- PlayGround -->
-        <section class="play-ground hidden">
+        <section id="playground" class="hidden">
             <div class="flex flex-col items-center gap-20 pt-20 ">
                 <!-- screen -->
                 <div class="artboard artboard-horizontal phone-6 border-[20px] border-[#010313cc] bg-[#FFFFFFB3] rounded-2xl">
