--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <p class="bg-[#2F2941] px-6 pb-4 rounded-b-xl text-white">Don't watch keyboard while playing...</p>
                     </div>
                     <div class="flex justify-center items-center h-full">
-                        <p class="text-red-700 text-8xl">Y</p>
+                        <p id="currentAlphabet" class="text-red-700 text-8xl">Y</p>
 
                     </div>
                 </div>
@@ -102,7 +102,8 @@
         </section>
 
     </main>
-
+    <script src="./script/utility.js"></script>
+    <script src="randomLetter.js"></script>
     <script src="./script/alphaclash.js"></script>
 </body>
 </html>
