--- a/index.html
+++ b/index.html
@@ -76,15 +76,19 @@
                 <!-- keyboard end -->
                 <!-- life score -->
                 <div class="flex justify-between w-3/4">
+
+                    <!-- display life -->
                     <button class="btn rounded-full bg-purple-300 text-white px-4">
                         Life
                         <img src="images/heart.svg" alt="">
-                        <span>1</span>
+                        <span id="lifeScore">3</span>
                     </button>
+
+                    <!-- display score -->
                     <button class="btn rounded-full bg-purple-700 text-white px-4">
                         Score
                         <img src="images/dollar.svg" alt="">
-                        <span>1</span>
+                        <span id="currentScore">0</span>
                     </button>
 
                 </div>
@@ -92,7 +96,7 @@
         </section>
         <!-- playground end -->
         <!-- final Score start -->
-        <section class="score flex justify-center items-center min-h-screen hidden">
+        <section id="score" class="flex justify-center items-center min-h-screen hidden">
             <div class="text-white text-center space-y-6 bg-[#FFFFFF33] p-4 rounded-lg">
                 <h1 class="text-8xl">
                     <span class="font-extrabold">Score:</span>
