updated with new functions

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <button class="btn rounded-full bg-purple-700 text-white px-4">
                         Score
                         <img src="images/dollar.svg" alt="">
-                        <span id="currentScore">0</span>
+                        <span id="current-Score">0</span>
                     </button>
 
                 </div>
@@ -98,11 +98,12 @@
         <!-- final Score start -->
         <section id="score" class="flex justify-center items-center min-h-screen hidden">
             <div class="text-white text-center space-y-6 bg-[#FFFFFF33] p-4 rounded-lg">
+                <h2 class="text-3xl">Game Over!!</h2>
                 <h1 class="text-8xl">
                     <span class="font-extrabold">Score:</span>
-                    <span>14</span>
+                    <span id="finalGameScore">0</span>
                 </h1>
-                <button class="btn">Play Again</button>
+                <button onclick="play()" class="btn">Play Again</button>
                 <p>Practice will make you a Pro</p>
             </div>
         </section>
